[package]
authors = ["T.J. Telan <t.telan@gmail.com>"]
categories = ["parser-implementations", "encoding"]
description = "A parser for git repo urls based on url crate"
documentation = "https://docs.rs/git-url-parse"
edition = "2024"
keywords = ["git", "url", "parsing", "normalize"]
license = "MIT"
name = "git-url-parse"
readme = "README.md"
repository = "https://github.com/tjtelan/git-url-parse-rs"
version = "0.4.6"
rust-version = "1.82"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tracing = { version = "0.1", optional = true }
#url = { version = "2.2" }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

nom = "8"
derive_builder = "0.20"

[dev-dependencies]
env_logger = "0.11"
regex = "1.10"
