[package]
authors = ["T.J. Telan <t.telan@gmail.com>"]
categories = ["parser-implementations"]
description = "A parser for git repo urls"
documentation = "https://docs.rs/git-url-parse"
edition = "2024"
keywords = ["git", "url", "parsing"]
license = "MIT"
name = "git-url-parse"
readme = "README.md"
repository = "https://github.com/tjtelan/git-url-parse-rs"
version = "0.4.6"
rust-version = "1.82"

[features]
default = []
tracing = ["dep:tracing"]
#filepath
#validate
#provider

[dependencies]
tracing = { version = "0.1", optional = true }
nom = "8"
thiserror = "2"
getset = "0.1.6"
url = { version = "2.5" }
#strum = { version = "0.27", features = ["derive"] }

#derive_builder = "0.20"
#typed-path = "0.11.0"

[dev-dependencies]
env_logger = "0.11"
regex = "1.10"
